05_securitygroups.tf
resource "aws_security_group" "eks_cluster" {
  name        = "eks-cluster-sg"
  vpc_id      = module.vpc.vpc_id
  description = "Security group for EKS cluster control plane"

  ingress {
    description = "Allow all traffic from worker nodes"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.vpc_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
